[package]
name = "ch2"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dtb-walker = "=0.2.0-alpha.3"
rcore-console = "0.0.0"
sifive-test-device = "0.0.0"
linker = { path = "../linker" }

[build-dependencies]
linker = { path = "../linker" }
